--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <div class="logo">
-      <a href="/"><img src="/logo.png" alt="Tuva" width="64" height="25"></a>
+      <a href="/"><img src="/logo.svg" alt="Tuva" width="64" height="25"></a>
     </div>
   </header>
   <div class="page-wrapper">
