Removing twitter link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <br>
         <h2>Temporarily Down for Maintenance</h2>
         <p>We're performing scheduled maintenance. We should be back shortly.</p>
-        <p>To reach us in the meantime, please email <a href="mailto:support@tuvalabs.com">support@tuvalabs.com</a> or message us on twitter <a href="https://twitter.com/TuvaLabs">@Tuvalabs</a></p>
+        <p>To reach us in the meantime, please email <a href="mailto:support@tuvalabs.com">support@tuvalabs.com</a>.</p>
       </div>
   </div>
   <footer>
